// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/exam/question when invalid state should render component 1`] = `
Array [
  <header
    className="sc-cMljjf kqTkNp"
  >
    <div
      className="sc-htoDjs kcwXek"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="sc-jDwBTQ gTnOFI"
        color="#fff"
        data-test="back"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-1"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
      </span>
    </div>
    <h1
      className="sc-jAaTju gRAIlK"
    >
      百人一首 - 腕試し -
    </h1>
  </header>,
  <div
    className="sc-gipzik ilyEGn"
  >
    <div
      className="sc-bRBYWo cpddbJ"
    >
      <p
        className="sc-hzDkRC kSViyF"
      >
        不正な遷移を行いました。前の画面からやり直してください。
      </p>
    </div>
  </div>,
]
`;

exports[`/exam/question when valid state should render component 1`] = `
Array [
  <header
    className="sc-cMljjf kqTkNp"
  >
    <div
      className="sc-htoDjs kcwXek"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="sc-jDwBTQ gTnOFI"
        color="#fff"
        data-test="back"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-1"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
      </span>
    </div>
    <h1
      className="sc-jAaTju gRAIlK"
    >
      百人一首 - 腕試し -
    </h1>
  </header>,
  <div
    className="sc-gipzik ilyEGn"
  >
    <div
      className="sc-bdVaJa fmvnED"
    >
      <div
        className="MuiCircularProgress-root-10 MuiCircularProgress-colorPrimary-13 MuiCircularProgress-indeterminate-12"
        role="progressbar"
        style={
          Object {
            "color": "#689F38",
            "height": 64,
            "width": 64,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-15"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-16 MuiCircularProgress-circleIndeterminate-18"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="sc-bwzfXH jeCWiS"
      >
        　　　百人一首 準備中。。。
      </div>
    </div>
  </div>,
]
`;
